# trinket-m0-rust

./: Cargo.toml  LICENSE  README.md  memory.x
.cargo/: config
src/: lib.rs  main.rs
