[package]
name = "trinket_m0"
version = "0.1.0"
authors = ["Christopher J. McClellan <chris.mcclellan203@gmail.com>"]
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]

[dependencies.atsamd21-hal]
version = "~0.1"
default-features = false

[dev-dependencies]
panic-abort = "~0.1"

[features]
# ask the HAL to enable atsamd21e18a support
default = ["rt", "atsamd21-hal/samd21e18a"]
rt = ["atsamd21-hal/rt"]
unproven = ["atsamd21-hal/unproven"]
use_semihosting = []
