[package]
name = "trinket_m0"
version = "0.1.0"
authors = ["Christopher J. McClellan <chris.mcclellan203@gmail.com>"]
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]

[dependencies]
cortex-m = "~0.5"
embedded-hal = "~0.2"
nb = "~0.1"
panic-abort = "~0.3"

[dependencies.cortex-m-rt]
version = "~0.6"
optional = true

[dependencies.atsamd21-hal]
version = "~0.2"
default-features = false

#[dev-dependencies]
#panic-abort = "~0.3"

[features]
# ask the HAL to enable atsamd21e18a support
default = ["rt", "atsamd21-hal/samd21e18a"]
rt = ["cortex-m-rt", "atsamd21-hal/samd21e18a-rt"]
unproven = ["atsamd21-hal/unproven"]
use_semihosting = []
